--- a/settings.json
+++ b/settings.json
@@ -7,3 +7,53 @@
         "django-html":"html",
     }
 }
+ User settings
+{
+    "cSpell.words": [
+        "hidesidebar",
+
+        "Suffah"
+    ],
+    "editor.minimap.autohide": false,
+    "editor.minimap.showSlider": "always",
+    "editor.minimap.size": "fill",
+    "editor.fontSize": 17,
+    "editor.cursorStyle": "block",
+    "editor.cursorBlinking": "smooth",
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.cursorSurroundingLines": 1,
+    "editor.renderLineHighlightOnlyWhenFocus": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "markdown.occurrencesHighlight.enabled": true,
+    "workbench.colorTheme": "Adwaita Dark & default syntax highlighting",
+    "workbench.preferredDarkColorTheme": "Solarized Dark",
+    "workbench.preferredHighContrastLightColorTheme": "Default High Contrast Light",
+    "editor.fontFamily": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif , Edu VIC WA NT Beginner Medium,Consolas, 'Courier New', monospace",
+    "errorLens.statusBarColorsEnabled": true,
+    "window.autoDetectColorScheme": true,
+    "files.autoSave": "afterDelay",
+    "liveServer.settings.CustomBrowser": "chrome",
+    "liveServer.settings.fullReload": true,
+    "liveServer.settings.NoBrowser": false,
+    "liveServer.settings.useLocalIp": true,
+
+  "editor.linkedEditing": true, // xml tag highlights
+  "editor.bracketPairColorization.enabled": true,
+  "editor.matchBrackets": "always",
+  "editor.guides.indentation": true,
+  "editor.guides.bracketPairs": "active",
+  "editor.guides.bracketPairsHorizontal": "active",
+  "workbench.colorCustomizations": {
+    "[Default Dark+]": {
+      "editorBracketMatch.border": "#ff0000",
+      "editorBracketMatch.background": "#000000",
+      "editorIndentGuide.activeBackground1": "#4400ff",
+      "editorBracketPairGuide.activeBackground1": "#0ffff0",
+      "editorBracketPairGuide.activeBackground2": "#0ffff0",
+      "editorBracketPairGuide.activeBackground3": "#0ffff0",
+      "editorBracketPairGuide.activeBackground4": "#0ffff0",
+      "editorBracketPairGuide.activeBackground5": "#0ffff0",
+      "editorBracketPairGuide.activeBackground6": "#0ffff0"
+    }
+  }
+}
